# aozora

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOTICE  README.ja.md  README.md  SECURITY.md  _typos.toml  cliff.toml  clippy.toml  deny.toml  docker-compose.ci.yml  docker-compose.yml  lefthook.yml  release-plz.toml
crates/aozora/: CHANGELOG.md  Cargo.toml
crates/aozora-bench/: Cargo.toml
crates/aozora-bench/benches/: crime_and_punishment.rs  synthetic_corpus.rs
crates/aozora-bench/examples/: allocator_pressure.rs  byte_distribution.rs  decode_throughput.rs  diagnostic_distribution.rs  fused_vs_materialized.rs  intern_dedup_ratio.rs  latency_histogram.rs  pathological_probe.rs  phase0_breakdown.rs  phase0_impact.rs  phase3_subsystems.rs  phase_breakdown.rs  render_hot_path.rs  throughput_by_class.rs
crates/aozora-bench/src/: lib.rs
crates/aozora-cli/: Cargo.toml
crates/aozora-cli/src/: introspect.rs  main.rs
crates/aozora-cli/tests/: introspect.rs  smoke.rs  snapshot_cli.rs
crates/aozora-conformance/: Cargo.toml
crates/aozora-conformance/src/: lib.rs
crates/aozora-conformance/tests/: property_fixture_round_trip.proptest-regressions  property_fixture_round_trip.rs  render_gate.rs
crates/aozora-cst/: Cargo.toml
crates/aozora-cst/src/: build.rs  kind.rs  lib.rs
crates/aozora-cst/tests/: property_lossless.proptest-regressions  property_lossless.rs
crates/aozora-encoding/: Cargo.toml  build.rs
crates/aozora-encoding/data/: aozora-gaiji-special.tsv  extract_aozora_gaiji.sh  jisx0213-2004.tsv  jisx0213-combo.tsv
crates/aozora-encoding/examples/: probe_gaiji.rs
crates/aozora-encoding/fuzz/: Cargo.toml
crates/aozora-encoding/src/: gaiji.rs  lib.rs
crates/aozora-encoding/tests/: fuzz_regressions.rs  gatekeeper.rs  property.rs
crates/aozora-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/aozora-ffi/src/: lib.rs
crates/aozora-lex/: Cargo.toml
crates/aozora-lex/benches/: tokenize_compare.rs
crates/aozora-lex/src/: borrowed.rs  engine.rs  lib.rs  pipeline.rs  state.rs  tokenize.rs
crates/aozora-lex/tests/: diagnostic_ordering.rs  property_borrowed_arena.proptest-regressions  property_borrowed_arena.rs  property_byte_identical.rs  slug_canonical_round_trip.rs  streaming_semantics.rs
crates/aozora-lexer/: Cargo.toml
crates/aozora-lexer/benches/: classify_kaeriten.rs
crates/aozora-lexer/proptest-regressions/: phase3_classify.txt
crates/aozora-lexer/src/: diagnostic.rs  instrumentation.rs  lib.rs  phase0_sanitize.rs  phase1_events.rs  phase2_pair.rs  phase3_classify.rs  phase4_normalize.rs  phase5_registry.rs  phase6_validate.rs  token.rs
crates/aozora-lexer/tests/: deep_nesting.rs
crates/aozora-pandoc/: Cargo.toml
crates/aozora-pandoc/src/: lib.rs  project.rs
crates/aozora-pandoc/tests/: property_pandoc_json_round_trip.proptest-regressions  property_pandoc_json_round_trip.rs
crates/aozora-parallel/: Cargo.toml
crates/aozora-parallel/src/: lib.rs
crates/aozora-parser/: Cargo.toml
crates/aozora-parser/benches/: incremental_fastpath.rs  parallel_parse.rs
crates/aozora-parser/examples/: profile_corpus.rs  render-sjis.rs  render-utf8.rs
crates/aozora-parser/fuzz/: Cargo.toml
crates/aozora-parser/proptest-regressions/: serialize.txt
crates/aozora-parser/src/: html.rs  incremental.rs  lib.rs  parallel.rs  segment.rs  serialize.rs  test_support.rs
crates/aozora-parser/tests/: aozora_spec.rs  concurrent_stress.rs  corpus_sweep.rs  forward_reference_regression.rs  golden_56656.rs  html_escape_invariants.rs  long_paragraph_regression.rs  property_fixpoint.rs  property_html_render.proptest-regressions  property_html_render.rs  property_incremental.proptest-regressions  property_incremental.rs  property_parallel.proptest-regressions  property_parallel.rs  property_ruby.rs  property_xss_prevention.rs  regression_html_layout.rs  ruby_segments.rs
crates/aozora-pipeline/: Cargo.toml
crates/aozora-pipeline/benches/: classify_kaeriten.rs  tokenize_compare.rs
crates/aozora-pipeline/fuzz/: Cargo.toml
crates/aozora-pipeline/src/: borrowed.rs  lib.rs  pipeline.rs
crates/aozora-pipeline/tests/: deep_nesting.rs  diagnostic_ordering.rs  fuzz_regressions.rs  property_annotation_unknown.proptest-regressions  property_annotation_unknown.rs  property_borrowed_arena.rs  property_phase1_scan_equiv.rs  slug_canonical_round_trip.rs  streaming_semantics.rs
crates/aozora-proptest/: Cargo.toml
crates/aozora-proptest/src/: config.rs  generators.rs
crates/aozora-py/: Cargo.toml  pyproject.toml
crates/aozora-py/src/: lib.rs
crates/aozora-query/: Cargo.toml
crates/aozora-query/src/: compile.rs  lib.rs  matcher.rs
crates/aozora-query/tests/: integration.rs  property_select_monotone.proptest-regressions  property_select_monotone.rs
crates/aozora-render/: Cargo.toml
crates/aozora-render/fuzz/: Cargo.toml
crates/aozora-render/src/: bouten.rs  html.rs  lib.rs  render_node.rs  serialize.rs  visitor.rs
crates/aozora-render/tests/: byte_identical_html.rs  byte_identical_serialize.rs  fuzz_regressions.rs  gatekeeper.rs  property_emit_symmetry.rs  property_html_roundtrip.rs  property_serialize_idempotent.proptest-regressions  property_serialize_idempotent.rs  snapshot_html_golden.rs
crates/aozora-scan/: Cargo.toml
crates/aozora-scan/benches/: scalar_scan.rs  scanner_bakeoff.rs
crates/aozora-scan/src/: dispatch.rs  lib.rs  naive.rs  scalar.rs  trait_def.rs
crates/aozora-scan/tests/: property_backend_equiv.rs
crates/aozora-spec/: Cargo.toml
crates/aozora-spec/src/: diagnostic.rs  lib.rs  offset.rs  pair.rs  sentinels.rs  slugs.rs  span.rs  trigger.rs
crates/aozora-spec/tests/: property_sentinel.rs
crates/aozora-syntax/: Cargo.toml
crates/aozora-syntax/benches/: accent_decompose.rs
crates/aozora-syntax/src/: accent.rs  alloc.rs  convert.rs  extension.rs  lib.rs  node_kind.rs  owned.rs
crates/aozora-trace/: Cargo.toml
crates/aozora-trace/src/: cache.rs  lib.rs  (+5 more)
crates/aozora-veb/: Cargo.toml
crates/aozora-wasm/: Cargo.toml
crates/aozora-xtask/: Cargo.toml
(+334 files in other folders)
