[workspace]
resolver = "3"
members = [
    "crates/aozora-syntax",
    "crates/aozora-lexer",
    "crates/aozora-parser",
    "crates/aozora-encoding",
    "crates/aozora-corpus",
    "crates/aozora-cli",
    "crates/aozora-test-utils",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.95.0"
license       = "Apache-2.0 OR MIT"
description   = "Aozora Bunko notation (青空文庫記法) parser: ruby, bouten, 縦中横, 外字, kaeriten, indent containers, page breaks"
repository    = "https://github.com/P4suta/aozora"
homepage      = "https://p4suta.github.io/aozora/"
documentation = "https://docs.rs/aozora-parser"
authors       = ["aozora contributors"]
readme        = "README.md"
keywords      = ["aozora", "japanese", "typography", "parser", "ruby"]
categories    = ["parser-implementations", "text-processing", "localization"]

[workspace.lints.rust]
unsafe_code      = "forbid"
non_ascii_idents = "deny"

missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

let_underscore_drop        = "warn"
keyword_idents_2024        = "warn"
variant_size_differences   = "warn"
ambiguous_negative_literals = "warn"

dead_code = "deny"

rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links       = "deny"
private_intra_doc_links      = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
invalid_rust_codeblocks      = "warn"
bare_urls                    = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

dbg_macro                  = "warn"
todo                       = "warn"
unimplemented              = "warn"
clone_on_ref_ptr           = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

str_to_string                    = "warn"
absolute_paths                   = "warn"
allow_attributes_without_reason  = "warn"
empty_structs_with_brackets      = "warn"
if_then_some_else_none           = "warn"
let_underscore_must_use          = "warn"
mixed_read_write_in_expression   = "warn"
rest_pat_in_fully_bound_structs  = "warn"
same_name_method                 = "warn"
semicolon_outside_block          = "warn"
try_err                          = "warn"
unneeded_field_pattern           = "warn"
verbose_file_reads               = "warn"
format_push_string               = "warn"
unnecessary_self_imports         = "warn"
assertions_on_result_states      = "warn"
filetype_is_file                 = "warn"
rc_buffer                        = "warn"
rc_mutex                         = "warn"
lossy_float_literal              = "warn"
suspicious_xor_used_as_pow       = "warn"

module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_const_for_fn    = "allow"
redundant_pub_crate     = "allow"

[workspace.dependencies]
# Internal crates — paths within this workspace.
aozora-syntax     = { version = "0.1.0", path = "crates/aozora-syntax" }
aozora-lexer      = { version = "0.1.0", path = "crates/aozora-lexer" }
aozora-parser     = { version = "0.1.0", path = "crates/aozora-parser" }
aozora-encoding   = { version = "0.1.0", path = "crates/aozora-encoding" }
aozora-corpus     = { version = "0.1.0", path = "crates/aozora-corpus" }
aozora-test-utils = { path = "crates/aozora-test-utils" }

# Error handling
thiserror = "2.0.18"
anyhow    = "1.0"
miette    = { version = "7.6.0", features = ["fancy"] }

# Parsing helpers
winnow                = "1.0"
unicode-segmentation  = "1.13"
regex                 = "1.12"

# Serialization / data
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
encoding_rs = "0.8.35"

# Compile-time hash maps (gaiji UCS lookup table, kaeriten/bouten slugs)
phf = { version = "0.13", features = ["macros"] }

# Filesystem walking — used by aozora-corpus to iterate test corpora
walkdir = "2.5"

# Test helpers
tempfile = "3.27"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env", "color", "cargo"] }

# Testing
insta             = { version = "1.47", features = ["yaml", "json", "filters"] }
proptest          = "1.11"
criterion         = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = 3

[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
