[workspace]
resolver = "3"
members = [
    "crates/aozora-spec",
    "crates/aozora-syntax",
    "crates/aozora-lexer",
    "crates/aozora-encoding",
    "crates/aozora-corpus",
    "crates/aozora-cli",
    "crates/aozora-test-utils",
    "crates/aozora-veb",
    "crates/aozora-scan",
    "crates/aozora-lex",
    "crates/aozora-render",
    "crates/aozora",
    "crates/aozora-ffi",
    "crates/aozora-wasm",
    "crates/aozora-py",
    "crates/aozora-bench",
    "crates/aozora-xtask",
    "crates/aozora-trace",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.95.0"
license       = "Apache-2.0 OR MIT"
description   = "Aozora Bunko notation (青空文庫記法) parser: ruby, bouten, 縦中横, 外字, kaeriten, indent containers, page breaks"
repository    = "https://github.com/P4suta/aozora"
homepage      = "https://p4suta.github.io/aozora/"
documentation = "https://docs.rs/aozora"
authors       = ["aozora contributors"]
readme        = "README.md"
keywords      = ["aozora", "japanese", "typography", "parser", "ruby"]
categories    = ["parser-implementations", "text-processing", "localization"]

[workspace.lints.rust]
unsafe_code      = "forbid"
non_ascii_idents = "deny"

missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

let_underscore_drop        = "warn"
keyword_idents_2024        = "warn"
# `variant_size_differences` (rustc): used to nudge fat variants
# behind `Box`. The lexer's `SpanKind::Aozora` already wraps its
# inner `AozoraNode` in `Box` so the variant is 8 bytes, but the
# residual ratio against 0-byte unit variants (`Plain`, `Newline`)
# still trips the heuristic. Allowed at the workspace level — the
# related `clippy::large_enum_variant` carve-out below documents the
# same call.
variant_size_differences   = "allow"
ambiguous_negative_literals = "warn"

dead_code = "deny"

rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links       = "deny"
private_intra_doc_links      = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
invalid_rust_codeblocks      = "warn"
bare_urls                    = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

dbg_macro                  = "warn"
todo                       = "warn"
unimplemented              = "warn"
clone_on_ref_ptr           = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

str_to_string                    = "warn"
absolute_paths                   = "warn"
allow_attributes_without_reason  = "warn"
empty_structs_with_brackets      = "warn"
if_then_some_else_none           = "warn"
let_underscore_must_use          = "warn"
mixed_read_write_in_expression   = "warn"
rest_pat_in_fully_bound_structs  = "warn"
same_name_method                 = "warn"
semicolon_outside_block          = "warn"
try_err                          = "warn"
unneeded_field_pattern           = "warn"
verbose_file_reads               = "warn"
format_push_string               = "warn"
unnecessary_self_imports         = "warn"
assertions_on_result_states      = "warn"
filetype_is_file                 = "warn"
rc_buffer                        = "warn"
rc_mutex                         = "warn"
lossy_float_literal              = "warn"
suspicious_xor_used_as_pow       = "warn"

module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_const_for_fn    = "allow"
redundant_pub_crate     = "allow"
# `large_enum_variant`: SpanKind::Aozora already wraps its inner
# `AozoraNode` in `Box` (~8 bytes ptr) to keep the variant data 7×
# smaller than the inline form (~56 bytes). The clippy heuristic
# still flags Box-vs-1-byte ContainerKind discrepancy as "more than
# 3× larger"; further uniformisation (boxing every variant) would
# regress code clarity and force Box::new at every construction
# site for negligible additional layout savings.
large_enum_variant      = "allow"

[workspace.dependencies]
# Internal crates — paths within this workspace.
aozora-spec       = { version = "0.1.0", path = "crates/aozora-spec" }
aozora-syntax     = { version = "0.1.0", path = "crates/aozora-syntax" }
aozora-veb        = { path = "crates/aozora-veb" }
aozora-scan       = { path = "crates/aozora-scan" }
aozora-lex        = { version = "0.1.0", path = "crates/aozora-lex" }
aozora-render     = { version = "0.1.0", path = "crates/aozora-render" }
aozora            = { version = "0.1.0", path = "crates/aozora" }
aozora-wasm       = { path = "crates/aozora-wasm" }
aozora-trace      = { path = "crates/aozora-trace" }

# Memory management
bumpalo = { version = "3.20", features = ["collections"] }

# Stack-inline small vectors — Innovation I-8. `smallvec` over
# `tinyvec` because the workspace's hot-stack payloads (e.g.,
# `(PairKind, usize)`) lack a meaningful `Default` impl that
# `tinyvec` would require.
smallvec = "1.15"

# SIMD-friendly substring scan
memchr = "2.8"

# Multi-pattern search (forward-reference target precedence check;
# annotation prefix DFA in a future commit). `default-features = false`
# at the workspace level so each consumer (aozora-lexer / aozora-scan)
# opts into exactly the features it needs.
aho-corasick = { version = "1.1", default-features = false }
# Byte-DFA construction (used by aozora-scan's DfaScanner backend;
# Hoehrmann-style multi-pattern automaton — see ADR-0015).
regex-automata = { version = "0.4", default-features = false }
aozora-lexer      = { version = "0.1.0", path = "crates/aozora-lexer" }
aozora-encoding   = { version = "0.1.0", path = "crates/aozora-encoding" }
aozora-corpus     = { version = "0.1.0", path = "crates/aozora-corpus" }
aozora-test-utils = { path = "crates/aozora-test-utils" }

# Error handling
thiserror = "2.0.18"
anyhow    = "1.0"
miette    = { version = "7.6.0", features = ["fancy"] }

# Parsing helpers
winnow                = "1.0"
unicode-segmentation  = "1.13"
regex                 = "1.12"

# Serialization / data
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml       = "1.1"
flate2     = "1.1"

# DWARF symbolication for samply trace analysis (aozora-trace).
# `loader` feature pulls in `object` + `memmap2` for in-process ELF
# parsing — no shell-out to `addr2line(1)`.
addr2line  = { version = "0.26", default-features = false }
# ELF / Mach-O / PE parsing — for build-id verification in the
# symbolicator. addr2line uses object internally; we add it
# explicitly so we can read .note.gnu.build-id.
object     = { version = "0.37", default-features = false, features = ["read"] }

# Encoding
encoding_rs = "0.8.35"

# Compile-time hash maps (gaiji UCS lookup table, kaeriten/bouten slugs)
phf = { version = "0.13", features = ["macros"] }

# Filesystem walking — used by aozora-corpus to iterate test corpora
walkdir = "2.5"

# Test helpers
tempfile = "3.27"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Parallelism — workspace-default work-stealing thread pool. Retained
# for batch tooling (corpus sweeps, doc-parallel benchmark drivers).
rayon              = "1.12"

# CLI
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env", "color", "cargo"] }

# Testing
insta             = { version = "1.47", features = ["yaml", "json", "filters"] }
proptest          = "1.11"
criterion         = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[profile.release]
# `lto = "fat"` (vs the prior "thin") so cross-crate function calls
# in the lex pipeline (aozora-render → aozora → aozora-lex →
# aozora-lexer phase functions) inline across the boundary. Measured
# 30%+ wall-clock regression on the corpus sweep with thin LTO once
# the lex orchestrator was split out of aozora-lexer's monolithic
# `lex()`; fat LTO recovers it. The compile-time cost is acceptable
# because the workspace already pins `codegen-units = 1` for release.
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = 3

[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
