[workspace]
resolver = "3"
members = [
    "crates/aozora-spec",
    "crates/aozora-syntax",
    "crates/aozora-encoding",
    "crates/aozora-corpus",
    "crates/aozora-cli",
    "crates/aozora-proptest",
    "crates/aozora-veb",
    "crates/aozora-scan",
    "crates/aozora-conformance",
    "crates/aozora-pipeline",
    "crates/aozora-render",
    "crates/aozora",
    "crates/aozora-ffi",
    "crates/aozora-wasm",
    "crates/aozora-py",
    "crates/aozora-bench",
    "crates/aozora-xtask",
    "crates/aozora-trace",
    "crates/aozora-pandoc",
    "crates/aozora-cst",
    "crates/aozora-query",
]
# `aozora-book` is the mdbook source tree; it has no Cargo manifest of its
# own. Listed in `exclude` so `cargo` ignores it during workspace globbing
# even if a stray `Cargo.toml` is added to the directory by accident.
exclude = ["crates/aozora-book"]

[workspace.package]
version       = "0.2.6"
edition       = "2024"
rust-version  = "1.95.0"
license       = "Apache-2.0 OR MIT"
description   = "Aozora Bunko notation (青空文庫記法) parser: ruby, bouten, 縦中横, 外字, kaeriten, indent containers, page breaks"
repository    = "https://github.com/P4suta/aozora"
homepage      = "https://p4suta.github.io/aozora/"
documentation = "https://docs.rs/aozora"
authors       = ["aozora contributors"]
readme        = "README.md"
keywords      = ["aozora", "japanese", "typography", "parser", "ruby"]
categories    = ["parser-implementations", "text-processing", "localization"]

[workspace.lints.rust]
unsafe_code      = "forbid"
non_ascii_idents = "deny"

missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

let_underscore_drop        = "warn"
keyword_idents_2024        = "warn"
# `variant_size_differences` (rustc): used to nudge fat variants
# behind `Box`. The lexer's `SpanKind::Aozora` already wraps its
# inner `AozoraNode` in `Box` so the variant is 8 bytes, but the
# residual ratio against 0-byte unit variants (`Plain`, `Newline`)
# still trips the heuristic. Allowed at the workspace level — the
# related `clippy::large_enum_variant` carve-out below documents the
# same call.
variant_size_differences   = "allow"
ambiguous_negative_literals = "warn"

dead_code = "deny"

rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
# Demoted from "deny" during the v0.1.0 → v0.2.0 split: AozoraNode
# moved from crate root into `aozora_syntax::borrowed`, which left
# ~80 `[crate::AozoraNode]`-style links pointing at stale paths
# across the workspace. They're harmless link-text issues, not
# correctness ones, but blocking docs build on them stalls the public
# Pages deploy. Re-tighten to "deny" once the doc-link cleanup pass
# lands (tracked issue: re-introduce after publication transition).
broken_intra_doc_links       = "warn"
private_intra_doc_links      = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
invalid_rust_codeblocks      = "warn"
bare_urls                    = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

dbg_macro                  = "warn"
todo                       = "warn"
unimplemented              = "warn"
clone_on_ref_ptr           = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

str_to_string                    = "warn"
absolute_paths                   = "warn"
allow_attributes_without_reason  = "warn"
empty_structs_with_brackets      = "warn"
if_then_some_else_none           = "warn"
let_underscore_must_use          = "warn"
mixed_read_write_in_expression   = "warn"
rest_pat_in_fully_bound_structs  = "warn"
same_name_method                 = "warn"
semicolon_outside_block          = "warn"
try_err                          = "warn"
unneeded_field_pattern           = "warn"
verbose_file_reads               = "warn"
format_push_string               = "warn"
unnecessary_self_imports         = "warn"
assertions_on_result_states      = "warn"
filetype_is_file                 = "warn"
rc_buffer                        = "warn"
rc_mutex                         = "warn"
lossy_float_literal              = "warn"
suspicious_xor_used_as_pow       = "warn"

module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_const_for_fn    = "allow"
redundant_pub_crate     = "allow"
# `large_enum_variant`: SpanKind::Aozora already wraps its inner
# `AozoraNode` in `Box` (~8 bytes ptr) to keep the variant data 7×
# smaller than the inline form (~56 bytes). The clippy heuristic
# still flags Box-vs-1-byte ContainerKind discrepancy as "more than
# 3× larger"; further uniformisation (boxing every variant) would
# regress code clarity and force Box::new at every construction
# site for negligible additional layout savings.
large_enum_variant      = "allow"

[workspace.dependencies]
# Internal crates — paths within this workspace.
aozora-spec       = { version = "0.2.6", path = "crates/aozora-spec" }
aozora-syntax     = { version = "0.2.6", path = "crates/aozora-syntax" }
aozora-veb        = { version = "0.2.6", path = "crates/aozora-veb" }
aozora-scan       = { version = "0.2.6", path = "crates/aozora-scan" }
aozora-pipeline   = { version = "0.2.6", path = "crates/aozora-pipeline" }
aozora-render     = { version = "0.2.6", path = "crates/aozora-render" }
aozora            = { version = "0.2.6", path = "crates/aozora" }
aozora-wasm       = { version = "0.2.6", path = "crates/aozora-wasm" }
aozora-trace      = { version = "0.2.6", path = "crates/aozora-trace" }

# Memory management
bumpalo = { version = "3.20", features = ["collections"] }

# Stack-inline small vectors — Innovation I-8. `smallvec` over
# `tinyvec` because the workspace's hot-stack payloads (e.g.,
# `(PairKind, usize)`) lack a meaningful `Default` impl that
# `tinyvec` would require.
smallvec = "1.15"

# SIMD-friendly substring scan
memchr = "2.8"

# Multi-pattern search (forward-reference target precedence check;
# annotation prefix DFA in a future commit). `default-features = false`
# at the workspace level so each consumer (aozora-lexer / aozora-scan)
# opts into exactly the features it needs.
aho-corasick = { version = "1.1", default-features = false }
# Byte-DFA construction (used by aozora-scan's DfaScanner backend).
# Compiled to a Hoehrmann-style multi-pattern automaton: O(1) byte
# transitions, no backtracking, table-driven — the right shape for
# the lexer's mixed-trigger search where Teddy's SIMD prefilter
# alone would still need a follow-up confirmation pass.
regex-automata = { version = "0.4", default-features = false }
aozora-encoding   = { version = "0.2.6", path = "crates/aozora-encoding" }
aozora-corpus       = { version = "0.2.6", path = "crates/aozora-corpus" }
aozora-conformance  = { version = "0.2.6", path = "crates/aozora-conformance" }
aozora-pandoc       = { version = "0.2.6", path = "crates/aozora-pandoc" }
aozora-cst          = { version = "0.2.6", path = "crates/aozora-cst" }
aozora-query        = { version = "0.2.6", path = "crates/aozora-query" }
aozora-proptest = { version = "0.2.6", path = "crates/aozora-proptest" }

# Error handling
thiserror = "2.0.18"
anyhow    = "1.0"
miette    = { version = "7.6.0", features = ["fancy"] }

# Parsing helpers
winnow                = "1.0"
unicode-segmentation  = "1.13"
regex                 = "1.12"

# Serialization / data
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# JSON Schema generation for the wire format. Used by aozora's
# `schema` feature to dump schemas of DiagnosticWire / NodeWire /
# PairWire / ContainerPairWire — the artefacts ship in
# `crates/aozora-book/src/wire/` and are CI drift-gated.
schemars   = { version = "1.0", features = ["preserve_order"] }
toml       = "1.1"
flate2     = "1.1"

# DWARF symbolication for samply trace analysis (aozora-trace).
# `loader` feature pulls in `object` + `memmap2` for in-process ELF
# parsing — no shell-out to `addr2line(1)`.
addr2line  = { version = "0.26", default-features = false }
# ELF / Mach-O / PE parsing — for build-id verification in the
# symbolicator. addr2line uses object internally; we add it
# explicitly so we can read .note.gnu.build-id.
object     = { version = "0.39", default-features = false, features = ["read"] }

# Encoding
encoding_rs = "0.8.35"

# Compile-time hash maps (gaiji UCS lookup table, kaeriten/bouten slugs)
phf = { version = "0.13", features = ["macros"] }

# Filesystem walking — used by aozora-corpus to iterate test corpora
walkdir = "2.5"

# Lossless syntax tree backbone for `aozora-cst` (Phase N1).
# rowan over cstree: 86 reverse deps vs ~3, maintained by the
# rust-analyzer team, established as the rust-language-tooling
# default. The bumpalo-arena vs Arc-tree dual-allocator overhead is
# acceptable: the AST stays the perf-critical path; the CST is the
# editor-grade lossless surface.
rowan = "0.16"

# Pandoc AST serde for the Phase M1 `aozora-pandoc` integration.
# `pandoc_ast` over `pandoc_types`: 3× more downloads (3k+/mo vs
# ~900/mo), more recently updated, and explicitly designed for
# writing filters. Both crates serialize the same JSON ABI Pandoc
# emits via `--to json`, so we get round-trip compatibility either
# way; we pick the more active one.
pandoc_ast = "0.8"

# Unicode-width-aware terminal table rendering — used by `aozora kinds`
# (CLI introspection) to lay out the per-enum tables. Hand-rolled
# alignment would mis-handle the East-Asian-Wide camelCase tags some
# `NodeKind` rows carry; comfy-table is the maintained mainstream
# choice (1.5M+ downloads/mo, used by sqlx / cargo-edit / lazygit-ui).
comfy-table = { version = "7.2", default-features = false }

# Physical-core count detection — used by aozora-corpus's
# parallel-load helper to size the rayon thread pool to *physical*
# cores rather than logical (hyperthreaded) ones, since the parser is
# memory-bandwidth bound and SMT siblings starve each other on the
# corpus-load throughput. Mainstream pure-Rust crate;
# `#[forbid(unsafe_code)]` in our code is preserved.
num_cpus = "1.16"

# zstd compression — used by `aozora-corpus::archive` for the
# compressed archive variant and by `xtask corpus pack` for the
# build-time pack. zstd over gzip / xz: 5-10× faster decompression
# at comparable ratios, dictionary support for small-file corpora,
# and frame-level random access matters for sweep parallelism.
# Pure-Rust API; underlying libzstd is C, but the boundary is hidden
# behind the `zstd` crate's safe API (same shape as encoding_rs /
# num_cpus / rayon).
zstd = "0.13"

# Content-addressed hashing — used by `aozora-corpus::archive` for
# per-entry source hashes (incremental pack diff). blake3 is the
# modern fast-and-secure default; pure-Rust SIMD impl, no unsafe in
# our code.
blake3 = "1.5"

# Pure-safe-Rust syscall wrapper — used by `xtask corpus uncache`
# for `posix_fadvise(POSIX_FADV_DONTNEED)` to evict corpus files
# from the kernel page cache without sudo, so cold-cache benchmark
# runs measure honest disk-bound throughput instead of warm reread.
# rustix itself uses unsafe internally to invoke syscalls (same
# shape as encoding_rs / num_cpus / rayon); the API surface we
# consume is safe.
rustix = { version = "1.1", features = ["fs"] }

# Test helpers
tempfile = "3.27"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Parallelism — workspace-default work-stealing thread pool. Retained
# for batch tooling (corpus sweeps, doc-parallel benchmark drivers).
rayon              = "1.12"

# CLI
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env", "color", "cargo"] }

# Testing
insta             = { version = "1.47", features = ["yaml", "json", "filters"] }
proptest          = "1.11"
criterion         = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[profile.release]
# `lto = "fat"` (vs the prior "thin") so cross-crate function calls
# in the lex pipeline (aozora-render → aozora → aozora-lex →
# aozora-lexer phase functions) inline across the boundary. Measured
# 30%+ wall-clock regression on the corpus sweep with thin LTO once
# the lex orchestrator was split out of aozora-lexer's monolithic
# `lex()`; fat LTO recovers it. The compile-time cost is acceptable
# because the workspace already pins `codegen-units = 1` for release.
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = 3

[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1

[profile.dev]
split-debuginfo = "unpacked"
# `debug = "line-tables-only"` keeps backtraces (line + file + symbol
# names) but drops the local-variable / parameter DWARF that doubles
# rustc's link-stage memory and time. The dev workflow goes through
# `docker compose run dev cargo nextest run`; nobody attaches gdb
# inside the container. The variable-inspect side of full debug info
# is therefore paying for nothing on every workspace cargo invocation.
# `mold` (the linker we already use, see docker-compose.yml) compounds
# the win because it spends a non-trivial fraction of its runtime in
# the debug-info section it now no longer has to merge.
debug = "line-tables-only"

[profile.dev.package."*"]
# `opt-level = 2` for every transitive dep (proc-macros and otherwise).
# Two effects:
#   1. proc macros (syn, serde_derive, clap_derive, schemars_derive,
#      zerocopy_derive) execute faster, which speeds up the host
#      crate's compile that consumes their `TokenStream` output.
#   2. dependency object code that gets linked into test binaries
#      runs faster, shrinking the test step in the coverage job.
# The cold-cache cost is +10-20 % on the dependency build itself, but
# sccache's GHA backend (see docker-compose.ci.yml) pulls those
# objects from the run-shared cache on subsequent runs, so the
# amortised cost is negligible. Workspace crates stay at the default
# opt-level=0 so iteration on aozora-* code keeps full incremental
# rebuild speed.
opt-level = 2
