[package]
name        = "aozora-bench"
description = "criterion + corpus-driven bench harness for the aozora parser (PGO profile source)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

# Internal — bench-only crate, never published.
publish     = false

[lints]
workspace = true

[dependencies]
aozora          = { workspace = true }
aozora-corpus   = { workspace = true }
aozora-encoding = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-lex      = { workspace = true }
memchr          = { workspace = true }
# phase_breakdown example reaches into the legacy phases directly.
# Once Move 2's fused engine ships, this dep becomes aozora-lex.
aozora-lexer    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
# Direct dep so the `phase3_subsystems` example can pull in the
# `aozora-lexer/phase3-instrument` feature on demand. Default builds
# inherit `default-features = false` here purely to keep the dep graph
# minimal — `aozora-lexer` is already in `[dependencies]`, so the
# default feature set is unchanged.
aozora-lexer = { workspace = true, features = [] }

[features]
default = []
# Activate the upstream `aozora-lexer/phase3-instrument` so examples
# (notably `pathological_probe`) can dump per-subsystem timings.
# Use: `cargo run --release --example pathological_probe -p aozora-bench
#       --features instrument`
instrument = ["aozora-lexer/phase3-instrument"]

[[bench]]
name    = "crime_and_punishment"
harness = false

[[bench]]
name    = "synthetic_corpus"
harness = false

# `phase3_subsystems` requires the opt-in instrumentation feature on
# `aozora-lexer`. Run with:
# `cargo run --release --example phase3_subsystems -p aozora-bench \
#    --features 'aozora-lexer/phase3-instrument'`
[[example]]
name             = "phase3_subsystems"
required-features = ["aozora-lexer/phase3-instrument"]
