[package]
name        = "aozora-cli"
description = "Command-line frontend for the aozora parser: check / fmt against Aozora Bunko notation files"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[[bin]]
name = "aozora"
path = "src/main.rs"

[dependencies]
# `schema` enables `aozora::wire::schema_*()` and pulls schemars in for
# the `aozora schema` introspection subcommand. CLI is the only
# binary that needs schema runtime, so feature-gating here keeps the
# library `aozora` crate light for plain library consumers.
aozora          = { workspace = true, features = ["schema"] }
aozora-encoding = { workspace = true }
aozora-pandoc   = { workspace = true }
clap            = { workspace = true }
comfy-table     = { workspace = true }
miette          = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
serde_json      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta    = { workspace = true }
