[package]
name        = "aozora-cst"
description = "Lossless concrete syntax tree (CST) for the aozora parser — rowan-backed projection from BorrowedLexOutput."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

# Phase N1 — workspace member, not yet on crates.io. The CST is a
# pure projection over `aozora::AozoraTree`'s public surface (no
# changes to the lex pipeline) so the API can absorb downstream
# usage before publish=true.
publish = false

[lints]
workspace = true

# Lower-level deps — depending on the public `aozora` meta crate
# would create a workspace cycle since `aozora` re-exports
# `aozora-cst` through its `cst` feature. Reaching for the spec /
# pipeline crates directly keeps the dep graph acyclic.
[dependencies]
aozora-pipeline = { workspace = true }
aozora-spec     = { workspace = true }
rowan           = { workspace = true }

[dev-dependencies]
aozora          = { workspace = true }
aozora-proptest = { workspace = true }
proptest        = { workspace = true }
