[package]
name        = "aozora-encoding"
description = "Aozora Bunko notation: Shift_JIS decoding and gaiji (外字) resolution"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[lints]
workspace = true

[dependencies]
aozora-syntax = { workspace = true }
encoding_rs = { workspace = true }
phf         = { workspace = true }
thiserror   = { workspace = true }
miette      = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
